# acwj

./: .gitignore
01_Scanner/: decl.h  input.h  main.c  scan.c
09_While_Loops/: stmt.c
48_Static/: Readme.md
52_Pointers_pt2/: Readme.md
asm_/: asm_note.txt  test_dasm1.c  test_dasm1_intel.s  test_dasm1_intel.s_desc  test_dasm1_linux.s  work_note.txt
study/: CMakeLists.txt  ast.h  common_headers.h  content.c  content.h  content_delegate.c  content_delegate.h  content_file.c  content_file.h  content_pri.h  content_text.c  content_text.h  decl.c  decl.h  expre.c  expre.h  gen.c  gen.h  global_context.c  global_context.h  main_h7.c  misc.c  misc.h  out.s_desc  out6.s  out_5.s  out_7.s  register.c  register.h  register_pri.h  scanner.c  scanner.h  statement.c  statement.h  sym.c  sym.h  token.h  types.c  types.h  utils.c  (+8 more)
study/content/: content_file.c  content_file.h  content_text.c  content_text.h
study/lib/: printint.c
study/note/: acwj  bnf_16  gcc_s_2_exe.bat  out.s_desc  out_10.s  out_11.s  out_12.s  out_13.s  out_13_arm.s  out_15.s  out_16.s  out_17.s  out_18.s  out_18a.s  out_19_2.s  out_20.s  out_21_1.s  out_23.s  out_27.s  out_7.s  out_8.s  out_9.s  vscode_readme.txt
study/register/: register_arm.c  register_arm.h  register_arm64.c  register_arm64.h  register_common.c  register_common.h  register_x64.c  register_x64.h
study/res/: input08  input19.c  input20.c  input25.c
study/writer/: writer_file.c  writer_file.h  writer_text.h
